welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:0: error: not found: value growFlowers
		growFlowers();
                ^